modules/networking/main.tf
// Create a VPC with a /16 CIDR block
resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16" // 65,536 IP addresses for the master cidr block
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "Main VPC"
  }
}

// Create an internet gateway
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "Main Internet Gateway"
  }
}

// Define the public subnets
resource "aws_subnet" "public" {
  count                   = 2
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.${count.index * 2 + 1}.0/24" // make sure third octet is odd to identify public subnets
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  map_public_ip_on_launch = true

  tags = {
    Name = "Public Subnet ${count.index + 1}"
  }
}

// Define the private subnets
resource "aws_subnet" "private" {
  count             = 2
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.${count.index * 2 + 2}.0/24" // make sure third octet is even to identify private subnets
  availability_zone = data.aws_availability_zones.available.names[count.index]

  tags = {
    Name = "Private Subnet ${count.index + 1}"
  }
}

// Define the public route table
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name = "Public Route Table"
  }
}

// Bind the public route table with both public subnets.
resource "aws_route_table_association" "public" {
  count          = 2
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

// Define the private route table
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "Private Route Table"
  }
}

// Bind the private route table to the private subnets 
resource "aws_route_table_association" "private" {
  count          = 2
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}

// Create a security group == virtual firewall to control inbount and outbound connections
// TODO: 
// 1) use aws_vpc_security_group_egress_rule and aws_vpc_security_group_ingress_rule
// instead of ingress and egress arguments
// 2) create arguments or resource definitions for ipv6? 
resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow inbound web traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "SSH to VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.main.cidr_block]
  }

  ingress {
    description = "HTTPS to VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.main.cidr_block]
  }

  egress {
    description = "SSH from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] // Allow to anywhere or limit to specific IP ranges as needed
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_web"
  }
}


// NACLs add an additional layer of security via subnet-level traffic control
# resource "aws_network_acl" "main" {
#   vpc_id = aws_vpc.main.id

#   # Ingress SSH (port 22) from anywhere
#   ingress {
#     protocol   = "tcp"
#     rule_no    = 110
#     action     = "allow"
#     cidr_block = "0.0.0.0/0" # Open to all IPs
#     from_port  = 22
#     to_port    = 22
#   }

#   # Allow HTTP from anywhere
#   ingress {
#     protocol   = "tcp"
#     rule_no    = 100
#     action     = "allow"
#     cidr_block = "0.0.0.0/0"
#     from_port  = 80
#     to_port    = 80
#   }

#   # Allow HTTPS from anywhere
#   ingress {
#     protocol   = "tcp"
#     rule_no    = 105 # Add a unique rule number for HTTPS
#     action     = "allow"
#     cidr_block = "0.0.0.0/0"
#     from_port  = 443
#     to_port    = 443
#   }

#   # Egress SSH (port 22) to anywhere
#   egress {
#     protocol   = "tcp"
#     rule_no    = 210 # Make sure this rule number is unique
#     action     = "allow"
#     cidr_block = "0.0.0.0/0" # Open to all IPs
#     from_port  = 22
#     to_port    = 22
#   }

#   # Egress HTTP (port 80) to anywhere
#   egress {
#     protocol   = "tcp"
#     rule_no    = 200
#     action     = "allow"
#     cidr_block = "0.0.0.0/0"
#     from_port  = 80
#     to_port    = 80
#   }

#   # Egress HTTPS (port 443) to anywhere
#   egress {
#     protocol   = "tcp"
#     rule_no    = 201 # Add a unique rule number for HTTPS egress
#     action     = "allow"
#     cidr_block = "0.0.0.0/0"
#     from_port  = 443
#     to_port    = 443
#   }

#   tags = {
#     Name = "main"
#   }
# }

# Temporarily allow all outbound traffic, for some reason my previouse acl
resource "aws_network_acl" "main" {
  vpc_id = aws_vpc.main.id

  ingress {
    protocol   = "-1"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  egress {
    protocol   = "-1"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  tags = {
    Name = "allow-all-nacl"
  }
}


// bind ACL with both public subnets
resource "aws_network_acl_association" "main" {
  count          = 2
  network_acl_id = aws_network_acl.main.id
  subnet_id      = aws_subnet.public[count.index].id
}
